--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,4 @@
 # https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
 
 # example:
-    *         @username1 @username2 @username3
+    *         @SubaitaM @nchouman @KarlFranzman @ercelangeles @nymur-rahman-nyar @ap001AP
