--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -12,21 +12,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Theynotlikeus"
         tools:targetApi="31">
+
+        <!-- Admin Activity -->
         <activity
             android:name=".AdminActivity"
             android:exported="false" />
+
+        <!-- Login Activity (Launcher Activity) -->
         <activity
             android:name=".LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Main Activity -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"/>
+
     </application>
 
 </manifest>
