added username in the mood class and then added it to the mood document

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
             android:name=".MainActivity"
             android:exported="true" /> <!-- Mood Event Activity (Newly Added) -->
         <activity
-            android:name=".MoodEventActivity"
+            android:name=".AddMoodEventActivity"
             android:exported="false" />
     </application>
 
