--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -13,9 +13,15 @@
         android:theme="@style/Theme.Theynotlikeus"
         tools:targetApi="31">
         <activity
-            android:name=".PersonalProfileDetailsActivity"
+            android:name=".MoodEventDetailsActivity"
             android:exported="false" />
-        <!-- Admin Activity -->
+        <activity
+            android:name=".EditDeleteMoodActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Theynotlikeus" />
+        <activity
+            android:name=".PersonalProfileDetailsActivity"
+            android:exported="false" /> <!-- Admin Activity -->
         <activity
             android:name=".AdminActivity"
             android:exported="false" /> <!-- Login Activity (Launcher Activity) -->
