implemented community map

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
 
         <activity android:name=".view.FriendMoodEventDetailsActivity" />
 
+        <activity android:name=".view.CommunityMapActivity" />
+
         <activity
             android:name=".view.MoodEventDetailsActivity"
             android:exported="false" />
