--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
 
     <application
         android:name=".singleton.MyApp"
@@ -64,6 +66,7 @@
             android:exported="false" />
         <activity android:name=".view.SearchUserActivity"/>
         <activity android:name=".view.ViewUserProfileActivity"/>
+
     </application>
 
 </manifest>
